--- a/Source/ArraySegments.nuspec
+++ b/Source/ArraySegments.nuspec
@@ -2,7 +2,7 @@
 <package>
  <metadata>
   <id>ArraySegments</id>
-  <version>1.0.2</version>
+  <version>1.0.3</version>
   <title>ArraySegments</title>
   <authors>Stephen Cleary</authors>
   <owners>Stephen Cleary</owners>
@@ -16,6 +16,7 @@
    <reference file="ArraySegments.dll" />
   </references>
   <releaseNotes>
+   [1.0.3] Nuget metadata changes.
    [1.0.2] Added readme.txt and icon.
    [1.0.1] Changed hosting to its own project on CodePlex.
   </releaseNotes>
