--- a/Source/ArraySegments.nuspec
+++ b/Source/ArraySegments.nuspec
@@ -2,7 +2,7 @@
 <package>
  <metadata>
   <id>ArraySegments</id>
-  <version>1.0.3</version>
+  <version>1.0.5</version>
   <title>ArraySegments</title>
   <authors>Stephen Cleary</authors>
   <owners>Stephen Cleary</owners>
@@ -10,15 +10,14 @@
   <description>Lightweight extension methods for ArraySegment&lt;T&gt;, particularly useful for byte arrays.</description>
   <language>en-US</language>
   <projectUrl>http://arraysegments.codeplex.com</projectUrl>
-  <iconUrl>http://download.codeplex.com/Download?ProjectName=arraysegments&amp;DownloadId=392057</iconUrl>
+  <iconUrl>http://download.codeplex.com/Download?ProjectName=arraysegments&amp;DownloadId=392090</iconUrl>
   <tags>nito arraysegments arraysegment net40 sl4 wp7 metro</tags>
   <references>
    <reference file="ArraySegments.dll" />
   </references>
   <releaseNotes>
-   [1.0.3] Nuget metadata changes.
-   [1.0.2] Added readme.txt and icon.
-   [1.0.1] Changed hosting to its own project on CodePlex.
+   [1.0.5 - 1.0.1] Nuget metadata changes.
+   [1.0.0] Initial release.
   </releaseNotes>
  </metadata>
  <files>
