--- a/Source/NET 4.0 Client/NET 4.0 Client.csproj
+++ b/Source/NET 4.0 Client/NET 4.0 Client.csproj
@@ -155,6 +155,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\AssemblyVersion.cs">
+      <Link>AssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="..\PortableClassLibrary\ArraySegmentExtensions.cs">
       <Link>ArraySegmentExtensions.cs</Link>
     </Compile>
