--- a/Source/PortableClassLibrary/PortableClassLibrary.csproj
+++ b/Source/PortableClassLibrary/PortableClassLibrary.csproj
@@ -37,6 +37,9 @@
     <DocumentationFile>bin\Release\ArraySegments.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\AssemblyVersion.cs">
+      <Link>AssemblyVersion.cs</Link>
+    </Compile>
     <Compile Include="ArraySegmentExtensions.cs" />
     <Compile Include="ArraySegmentListWrapper.cs" />
     <Compile Include="ArraySegmentReader.cs" />
