Added AssemblyVersion to .NET 4.5 / Windows Store assembly.

--- a/Source/NET 4.0 Client/NET 4.0 Client.csproj
+++ b/Source/NET 4.0 Client/NET 4.0 Client.csproj
@@ -158,7 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\AssemblyVersion.cs">
-      <Link>AssemblyVersion.cs</Link>
+      <Link>Properties\AssemblyVersion.cs</Link>
     </Compile>
     <Compile Include="..\PortableClassLibrary\ArraySegmentExtensions.cs">
       <Link>ArraySegmentExtensions.cs</Link>
